Fix chapters icon layout shift

--- a/client/src/sass/player/control-bar.scss
+++ b/client/src/sass/player/control-bar.scss
@@ -5,7 +5,7 @@
 
 $slider-height: 3px;
 $slider-hover-height: 5px;
-$chapter-marker-size: 10px;
+$chapter-marker-size: 9px;
 
 .vjs-peertube-skin.has-chapter {
   .vjs-time-tooltip {
